--- a/hu_veritas_7x.adoc
+++ b/hu_veritas_7x.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, veritas, infoscale, 7.4.a, 7.4.2, 7.4.3, netapp, ontap
 summary: Describes how to use Oracle Linux 6.4 with ONTAP
 ---
 
-= Using Veritas Infoscale 7.4.x with NetApp ONTAP
+= Using Veritas Infoscale 7.4.x for Linux with NetApp ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -79,7 +79,7 @@ NAME       STATE    ENCLR-TYPE  PATHS  ENBL  DSBL ENCLR-NAME
 sfrac0_47  ENABLED  SFRAC       4      4     0    sfrac0
 ----
 
-When you are using Veritas Dynamic Multipathing (VxDMP), you must perform configuration tasks to claim NetApp LUNs as Veritas Multipath Devices. You must have the Array Support Library (ASL) and the Array Policy Module (APM) packages installed that Veritas provides for NetApp storage systems.  The Veritas software installation loads the default ASL APM packages, but it is recommended to use the latest supported packages listed on Veritas support portal.
+With Veritas Dynamic Multipathing (VxDMP), you must perform configuration tasks to claim NetApp LUNs as Veritas Multipath Devices. You must have the Array Support Library (ASL) and the Array Policy Module (APM) packages installed that Veritas provides for NetApp storage systems.  While the Veritas Software Installation loads the default ASL APM packages along with the product, it is recommended to use the latest supported packages listed on Veritas support portal.
 
 .Example
 
@@ -122,9 +122,9 @@ sdea  ENABLED     Active/Non-Optimized c14   SFRAC       sfrac0     -      -
 
 include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
 
-== Recommended Settings
+=== Recommended Settings
 
-=== Settings for Veritas Multipath
+==== Settings for Veritas Multipath
 
 The following Veritas VxDMP tunables are recommended by NetApp for optimum system configuration in storage failover operations.
 
@@ -179,7 +179,7 @@ dmp_monitor_fabric                  on                on
 dmp_native_support                 off               off
 ----
 
-=== Settings by protocol
+==== Settings by protocol
 
 * For FC/FCoE only:  Use the default timeout values.
 * For iSCSI only: Set the `replacement_timeout` parameter value to 120.
@@ -193,7 +193,7 @@ The iSCSI `replacement_timeout` parameter controls how long the iSCSI layer shou
 node.session.timeo.replacement_timeout = 120
 ----
 
-=== Settings by OS platforms
+==== Settings by OS platforms
 
 For Red Hat Enterprise Linux 7 and 8 series, you must configure `udev rport` values to support the Veritas Infoscale environment in storage failover scenarios. Create the file `/etc/udev/rules.d/40-rport.rules` with the following file content:
 
