Adding notice file

--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -64,3 +64,7 @@ include::_include/hu/reuse_hu_installing_luhu.adoc[]
 === List all SMV target LIF WWPNs attached to host
 
 === List ONTAP LUNs seen on host by a given SVM target LIF WWPN
+
+== Notice File
+
+link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2559115[Linux Unified Host Utilities Notice File]
