--- a/nvme_rhel_82.adoc
+++ b/nvme_rhel_82.adoc
@@ -85,11 +85,8 @@ defaults {
 . Restart the multipathd daemon by running a `systemctl restart multipathd`.
 
 
-==	Validating NVMe/FC
 
-include::_include/nvme/reuse_validating_nvme_fc_rhel.adoc[]
-
-== Configuring the Broadcom FC Adapter
+== Configuring the Broadcom FC adapter for NVMe/FC
 
 For the most current list of supported adapters see the see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix].
 
@@ -185,6 +182,12 @@ options lpfc lpfc_sg_seg_cnt=256
 # cat /sys/module/lpfc/parameters/lpfc_sg_seg_cnt
 256
 ----
+
+
+==	Validating NVMe/FC
+
+include::_include/nvme/reuse_validating_nvme_fc_rhel.adoc[]
+
 
 == LPFC Verbose Logging
 
