--- a/nvme_rhel_83.adoc
+++ b/nvme_rhel_83.adoc
@@ -22,7 +22,7 @@ NVMe/FC is supported on ONTAP 9.6 or later for RHEL 8.3. The RHEL 8.3 host runs 
 
 For RHEL 8.3, in-kernel NVMe multipath remains disabled by default. Therefore, you need to enable it manually. Steps for doing so are provided in the next section, "Enabling NVMe/FC".
 
-== Enabling NVMe/FC
+== Enabling NVMe/FC on RHEL 8.3
 
 . Install Red Hat Enterprise Linux 8.3 GA on the server.
 +
