--- a/wuhu_windows_2016.adoc
+++ b/wuhu_windows_2016.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu_windows_2016.html
+permalink: wuhu_windows_2016.html
 keywords: windows, enterprise
 summary: Using Windows Server 2016 with ONTAP
 ---
