--- a/_include/windows/reuse_windows_san_boot.adoc
+++ b/_include/windows/reuse_windows_san_boot.adoc
@@ -1,4 +1,4 @@
-If you opt to use SAN booting, it must be supported by your configuration. You can use the NetApp Interoperability Matrix Tool to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
+If you opt to use SAN booting, it must be supported by your configuration. You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=91863;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
 
 . Map the SAN boot LUN to the host.
 . Verify multiple paths are available. Remember, multiple paths will only be available after the host OS is up and running on the paths.
