--- a/hu_aix_72.adoc
+++ b/hu_aix_72.adoc
@@ -54,6 +54,10 @@ The following directory is created when you uncompress the file: ntap_aix_host_u
 
 include::_include/hu/reuse_hu_san_toolkit_withoutexample.adoc[]
 
+.Example
+
+In the following example, the `sanlun lun show` command returns LUN information.
+
 ----
 #sanlun lun show
 
@@ -82,12 +86,7 @@ SAN booting is the process of setting up a SAN-attached disk (a LUN) as a boot d
 Multipathing allows you to configure multiple network paths between the host and storage system. If one path fails, traffic continues on the remaining paths. The AIX and PowerVM environments of the Host Utilities use AIX’s native multipathing solution (MPIO).
 For AIX, Path Control Module (PCM) is responsible for controlling multiple paths. PCM is a storage vendor supplied code that handles path management. This gets installed and enabled as part of the Host Utilities installation.
 
-=== Non-ASA configuration
-
-For non-ASA configuration, you should see Active/Optimized (primary) paths and Active/non-optimized (secondary) paths.  The Active/Optimized paths are local and serviced by the controller where the aggregate is located. The non-optimized paths are remote and served from a different controller (HA-partner). The non-optimized paths are only used when no Optimized paths are available.
-
-.Example
-The following example displays the correct output for an ONTAP LUN with two Active/Optimized paths and two Active/non-Optimized paths:
+include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
 
 ----
 # sanlun lun show -p |grep -p hdisk78
@@ -110,12 +109,9 @@ up      secondary  path3  fcs1    fc_aix_4        1
 
 ----
 
-=== All SAN Array (ASA) configuration
+include::_include/hu/reuse_hu_asa_configuration.adoc[]
 
-ASA systems provide symmetric active-active paths from hosts to storage. All paths between the host and storage are active and optimized across high availability (HA) partners in this design. For ASA configuration, all the paths will be reported as Active/Optimized and I/O is sent on all the active paths. This feature is supported from ONTAP 9.8 for AIX Hosts.
-
-.Example
-The following example displays the correct output for an ONTAP LUN with four Active/Optimized paths:
+NOTE: All SAN Arrays (ASA) configurations are supported beginning in ONTAP 9.8 for AIX Hosts.
 
 ----
 # sanlun lun show -p |grep -p hdisk78
