--- a/hu_hpux_11iv3.adoc
+++ b/hu_hpux_11iv3.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
-permalink: hu_aix_72.html
-keywords: host utilities, aix, powervm, vios, 3.1, 7.2 netapp, ontap
+permalink: hu_hpux_11iv3.html
+keywords: host utilities, hp_ux, 11iv3, netapp, ontap
 summary: Describes how to use IBM AIX 7.2 and/or PowerVM VIOS 3.1 with with ONTAP
 ---
 
-= Using IBM AIX 7.2 and/or PowerVM VIOS 3.1 with NetApp ONTAP
+= Using HP-UX 11i v3 with NetApp ONTAP
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -15,37 +15,23 @@ summary: Describes how to use IBM AIX 7.2 and/or PowerVM VIOS 3.1 with with ONTA
 :imagesdir: ./media/
 
 
-== Installing the AIX/VIOS Host Utilities
-
-You must install the AIX Host Utilities Kit while using AIX MPIO with NetApp ONTAP Storage.
+== Installing the HP-UX Host Utilities
 
 You can download the compressed file containing the Host Utilities software packages from the NetApp Support Site. After you have the file, you must uncompress it to get the two software packages you need to install the Host Utilities.
 
 .Steps
 
-. Login to your host.
-+
-* On an AIX host, log in as *root*.
-+
-* On a PowerVM host, log in as *padmin*, and then enter the `oem_setup_env` command to become root.
-
-.	Download a copy of the compressed file containing the Host Utilities from NetApp Support Site to a directory on your host.
+.	Download a copy of the compressed file containing the Host Utilities from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab[NetApp Support Site] to a directory on your host.
 
 .	 Go to the directory containing the download.
 
-. Uncompress the file and extract the SAN Toolkit software package.
+. Uncompress the file.
 +
-`zcat ntap_aix_host_utilities_6.0.tar.Z | tar -xvf –`
+`gunzip netapp_hpux_host_utilities_6.0_ia_pa.depot.gz`
 
+. Enter the following command to install the software:
 +
-The following directory is created when you uncompress the file: ntap_aix_host_utilities_6.0.  This directory will have one of the following subdirectories:  MPIO, NON_MPIO, or SAN_Tool_Kit
-
-.	Install the AIX MPIO:
-+
-`installp -aXYd /var/tmp/ntap_aix_host_utilities_6.0/MPIO NetApp.MPIO_Host_Utilities_Kit`
-
-. Install the SAN Toolkit:
-`installp -aXYd /var/tmp/ntap_aix_host_utilities_6.0/SAN_Tool_Kit NetApp.SAN_toolkit`
+`swinstall -s /netapp_hpux_host_utilities_6.0_ia_pa.depot NetApp_santoolkit`
 
 . Reboot the host.
 
@@ -54,17 +40,20 @@ The following directory is created when you uncompress the file: ntap_aix_host_u
 
 include::_include/hu/reuse_hu_san_toolkit_withoutexample.adoc[]
 
+.Example
+
+In the following example, the `sanlun lun show` command returns LUN information.
+
 ----
 #sanlun lun show
 
-controller(7mode)/                  device      host       lun
-vserver(Cmode)    lun-pathname     filename    adapter   protocol   size   mode
+controller(7mode)/                            device                         host     lun
+vserver(Cmode)    lun-pathname               filename                       adapter protocol  size  mode
 --------------------------------------------------------------------------------
-data_vserver      /vol/vol1/lun1    hdisk0      fcs0       FCP       60g    C
-data_vserver      /vol/vol2/lun2    hdisk0      fcs0       FCP       20g    C
-data_vserver      /vol/vol3/lun3    hdisk11     fcs0       FCP       20g    C
-data_vserver      /vol/vol4/lun4    hdisk14     fcs0       FCP       20g    C
-
+sanboot_unix      /vol/hpux_215_boot_en_0/goot_hpux_215_lun /dev/rdsk/c11t0d0 fcd0   FCP      150g   C
+sanboot_unix      /vol/hpux_215_boot_en_0/goot_hpux_215_lun /dev/rdsk/c24t0d0 fcd1   FCP      150g   C
+sanboot_unix      /vol/hpux_215_boot_en_0/goot_hpux_215_lun /dev/rdsk/c21t0d0 fcd1   FCP      150g   C
+sanboot_unix      /vol/hpux_215_boot_en_0/goot_hpux_215_lun /dev/rdsk/c12t0d0 fcd0   FCP      150g   C
 ----
 
 == SAN Booting
@@ -72,99 +61,85 @@ data_vserver      /vol/vol4/lun4    hdisk14     fcs0       FCP       20g    C
 .Before you begin
 If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=71102;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
 
-SAN booting is the process of setting up a SAN-attached disk (a LUN) as a boot device for an AIX/PowerVM host.  You can set up a SAN boot LUN to work in an AIX MPIO environment that is running the AIX Host Utilities with either the FC or FCoE protocol. The method you use for creating a SAN boot LUN and installing a new OS image on it in an AIX MPIO environment can vary, depending on which protocol you are using.
-
-* link:hu_aix_72_sanbooting_aix.html[AIX MPIO without Power VM]
-* link:hu_aix_72_sanbooting_powervm_vscsi.html[PowerVM vSCSI]
+SAN booting is the process of setting up a SAN-attached disk (a LUN) as a boot device for a HP-UX host. The Host Utilities support SAN booting with FC and FCoE protocols in HP-UX environments.
 
 == Multipathing
 
-Multipathing allows you to configure multiple network paths between the host and storage system. If one path fails, traffic continues on the remaining paths. The AIX and PowerVM environments of the Host Utilities use AIX’s native multipathing solution (MPIO).
-For AIX, Path Control Module (PCM) is responsible for controlling multiple paths. PCM is a storage vendor supplied code that handles path management. This gets installed and enabled as part of the Host Utilities installation.
+Multipathing allows you to configure multiple network paths between the host and storage system. If one path fails, traffic continues on the remaining paths. For a host to have multiple paths to a LUN, multipathing must be enabled.  The HP-UX Host Utilities support different multipathing solutions based on your configuration. The following is for the Native Multipathing solution.
 
-=== Non-ASA configuration
-
-For non-ASA configuration, you should see Active/Optimized (primary) paths and Active/non-optimized (secondary) paths.  The Active/Optimized paths are local and serviced by the controller where the aggregate is located. The non-optimized paths are remote and served from a different controller (HA-partner). The non-optimized paths are only used when no Optimized paths are available.
-
-.Example
-The following example displays the correct output for an ONTAP LUN with two Active/Optimized paths and two Active/non-Optimized paths:
+include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
 
 ----
-# sanlun lun show -p |grep -p hdisk78
-                    ONTAP Path: vs_aix_clus:/vol/chataix_205p2_vol_en_1_7/jfs_205p2_lun_en
+# sanlun lun show -p vs39:/vol/vol24_3_0/lun24_0
+                    ONTAP Path: vs39:/vol/vol24_3_0/lun24_0
                            LUN: 37
                       LUN Size: 15g
-                   Host Device: hdisk78
+                   Host Device: /dev/rdisk/disk942
                           Mode: C
-            Multipath Provider: AIX Native
-        Multipathing Algorithm: round_robin
-------- ---------- ------ ------- ---------- ----------
-host    vserver    AIX                        AIX MPIO
-path    path       MPIO   host    vserver         path
-state   type       path   adapter LIF         priority
-------- ---------- ------ ------- ---------- ----------
-up      secondary  path0  fcs0    fc_aix_1        1
-up      primary    path1  fcs0    fc_aix_2        1
-up      primary    path2  fcs1    fc_aix_3        1
-up      secondary  path3  fcs1    fc_aix_4        1
-
+              Multipath Policy: A/A
+            Multipath Provider: Native
+------- ---------- ------ ------- ---------- ---------- --------------
+host    vserver     /dev/dsk                            HP A/A
+path    path        filename          host    vserver   path failover
+state   type        or hardware path adapter    LIF     priority
+------- ---------- ------ ------- ---------- ---------- --------------
+up       primary    /dev/dsk/c39t4d5   fcd0    hpux_3     0
+up       primary    /dev/dsk/c41t4d5   fcd1    hpux_4     0
+up       secondary  /dev/dsk/c40t4d5   fcd0    hpux_3     1
+up       secondary  /dev/dsk/c42t4d5   fcd1    hpux_4     1
 ----
 
-=== All SAN Array (ASA) configuration
+include::_include/hu/reuse_hu_asa_configuration.adoc[]
 
-ASA systems provide symmetric active-active paths from hosts to storage. All paths between the host and storage are active and optimized across high availability (HA) partners in this design. For ASA configuration, all the paths will be reported as Active/Optimized and I/O is sent on all the active paths. This feature is supported from ONTAP 9.8 for AIX Hosts.
-
-.Example
-The following example displays the correct output for an ONTAP LUN with four Active/Optimized paths:
+NOTE: All SAN Array (ASA) configurations are supported beginning in ONTAP 9.8 for HP-UX 11iv3
 
 ----
-# sanlun lun show -p |grep -p hdisk78
-                    ONTAP Path: vs_aix_clus:/vol/chataix_205p2_vol_en_1_7/jfs_205p2_lun_en
-                           LUN: 37
-                      LUN Size: 15g
-                   Host Device: hdisk78
+# sanlun lun show -p vs39:/vol/hpux_vol_1_1/hpux_lun
+
+                    ONTAP Path: vs39:/vol/hpux_vol_1_1/hpux_lun
+                           LUN: 2
+                      LUN Size: 30g
+                   Host Device: /dev/rdisk/disk25
                           Mode: C
-            Multipath Provider: AIX Native
-        Multipathing Algorithm: round_robin
------- ------- ------ ------- --------- ----------
-host   vserver  AIX                      AIX MPIO
-path   path     MPIO   host    vserver     path
-state  type     path   adapter LIF       priority
------- ------- ------ ------- --------- ----------
-up     primary  path0  fcs0    fc_aix_1     1
-up     primary  path1  fcs0    fc_aix_2     1
-up     primary  path2  fcs1    fc_aix_3     1
-up     primary  path3  fcs1    fc_aix_4     1
+            Multipath Provider: None
+-------- ---------- -------------------- ------- --------------
+host     vserver    /dev/dsk
+path     path       filename             host    vserver
+state    type       or hardware path     adapter LIF
+-------- ---------- -------------------- ------- --------------
+up       primary    /dev/dsk/c4t0d2      fcd0    248_1c_hp
+up       primary    /dev/dsk/c6t0d2      fcd0    246_1c_hp
+up       primary    /dev/dsk/c10t0d2     fcd1    246_1d_hp
+up       primary    /dev/dsk/c8t0d2      fcd1    248_1d_hp
 ----
 
 == Recommended Settings
 
-Following are some recommended parameter settings for NetApp ONTAP LUN’s.  The critical parameters for ONTAP LUN’s are set automatically after installing the NetApp Host Utilities Kit.
+Following are some recommended parameter settings for HPUX 11i v3 and NetApp ONTAP LUNs.  NetApp uses the default settings for HP-UX.
+
+[cols=2*, options="header"]
+|===
+| Parameter
+| Uses Default Value
+| transient_secs | 120
+| leg_mpath_enable | TRUE
+| max_q_depth  | 8
+| path_fail_secs | 120
+| load_bal_policy | Round_robin
+| lua_enabled  | TRUE
+| esd_secs | 30
+|===
+
+== Known Problems and Limitations
 
 [cols=4*, options="header"]
 |===
-| Parameter
-| Environment
-| Value for AIX
-| Note
-| algorithm | MPIO | round_robin | Set by Host Utilities
-| hcheck_cmd | MPIO | inquiry | Set by Host Utilities
-| hcheck_interval | MPIO | 30 | Set by Host Utilities
-| hcheck_mode | MPIO | nonactive | Set by Host Utilities
-| lun_reset_spt | MPIO / non-MPIO | yes | Set by Host Utilities
-| max_transfer | MPIO / non-MPIO | FC LUNs: 0x100000 bytes | Set by Host Utilities
-| qfull_dly | MPIO / non-MPIO | 2-second delay | Set by Host Utilities
-| queue_depth | MPIO / non-MPIO | 64 | Set by Host Utilities
-| reserve_policy | MPIO / non-MPIO | no_reserve | Set by Host Utilities
-| re_timeout (disk) | MPIO / non-MPIO | 30 seconds | Uses OS Default values
-| dyntrk | MPIO / non-MPIO | Yes | Uses OS Default values
-| fc_err_recov | MPIO / non-MPIO | Fast_fail | Uses OS Default values
-| q_type | MPIO / non-MPIO | simple | Uses OS Default values
-| num_cmd_elems | MPIO / non-MPIO | 1024 for AIX
-3072 for VIOS | FC EN1B, FC EN1C
-| num_cmd_elems | MPIO / non-MPIO | 1024 for AIX | FC EN0G
+| NetApp Bug ID
+| Title
+| Description
+| Partner ID
+| 1344935 | HPUX 11.31 Host intermittently reporting path status incorrectly on ASA setup. | Path reporting issues with ASA configuration. | NA
+| 1306354 | HPUX LVM creation sends I/O of block size above 1MB | SCSI Maximum Transfer Length of 1 MB is enforced in ONTAP All SAN Array. To restrict the Maximum Transfer Length from HP-UX hosts when connected to ONTAP All SAN Array, it is required to set the Maximum I/O size allowed by the HP-UX SCSI subsystem to 1 MB.
+
+Refer HP-UX vendor documentation for details. | NA
 |===
-
-== Recommended Settings for MetroCluster
-
-By default, the AIX operating system enforces a shorter I/O timeout if when no paths to a LUN are available. This might occur in configurations including single-switch SAN fabric and MetroCluster configurations that experience unplanned failovers. For addition information and recommended changes to default settings, please refer to link:https://kb.netapp.com/app/answers/answer_view/a_id/1001318[NetApp KB1001318]
