file name changes

--- a/hu_windows_2012r2.adoc
+++ b/hu_windows_2012r2.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: wuhu_windows_2012_R2.html
+permalink: hu_windows_2012_R2.html
 keywords: windows, enterprise
 summary: Using Windows Server 2012 R2 with ONTAP
 ---
