--- a/hu_windows_2019.adoc
+++ b/hu_windows_2019.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: wuhu_windows_2019.html
+permalink: hu_windows_2019.html
 keywords: windows, enterprise
 summary: Using Windows Server 2019 with ONTAP
 ---
